client/src/app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

html {
    @apply scroll-smooth;
}

body {
    max-width: 100vw;
    overflow-x: hidden;
}

* {
    max-width: 100%!important;
}

.falling-items {
    display: inline-block;
    left: 100%; /* Partenza dalla destra */
    /* z-index: -1; */
    /* animation: falling-items 5s ease-in infinite; */
    animation: falling-items 10s linear infinite;
}

/* in desktop, set animation duration longer */
@media (min-width: 768px) {
    .falling-items {
        animation: falling-items 20s linear infinite;
    }
}

@media (min-width: 1024px) {
    .falling-items {
        animation: falling-items 30s linear infinite;
    }
}

@keyframes falling-items {
    from {
        left: 150%;
        rotate : -180deg;
    }

    to {
        left: -50%; /* Arrivo sulla sinistra */
        rotate : 180deg;
    }
}

.falling-items-container {
    white-space: nowrap;
    font-size: 0; /* VABBÈ DIVENTA INUTILE IL COSO MA VA BENE */
  }
  
/* 
.falling-items-container::before {
    content: '';
    position: absolute;
    top: 3.5rem;
    left: 0;
    width: 100%;
    height: 55vh;
    background: radial-gradient(ellipse at center, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.7) 100%);
    pointer-events: none;
  } */

